# occlum

./: .gitmodules  Makefile  README.md
.github/workflows/: benchmarks.yml  benchmarks_dev.yml  demo_test.yml  hw_mode_test.yml  package_repo_setup_and_test.yml
demos/AntGLMInference/: README.md  antglm.yaml  antglm_evaluator.py  build_occlum_instance.sh  install_python_with_conda.sh  model_exec_fineva_main.py  requirements.txt
demos/bash/: occlum_bash_test.sh  run_bash_demo.sh
demos/bigdl-llm/: README.md  install_python_with_conda.sh
demos/faiss/: README.md  build_occlum_instance.sh  faiss.yaml  install_python_with_conda.sh
demos/fin_eval/: README.md  build_occlum_instance.sh  eval.yaml  install_python_with_conda.sh  llama2_evaluator.py
demos/java/: process_builder.yaml  run_java_on_occlum.sh
demos/langchain-chatchat/: build_occlum_instance.sh  install_python_with_conda.sh  rag.sh  rag.yaml
demos/mem_status/: README.md  bom.yaml  build.sh
demos/meminfo_logger/: Makefile  README.md  bom.yaml  build.sh  meminfo_logger.c
demos/minio/: build_and_run.sh  minio.yaml
demos/mongodb/: README.md  benchmark.sh  build_occlum_instance.sh  dl_and_build_mongod.sh  mongod.conf  mongodb.yaml
demos/mysql/: README.md  install_mysql.sh  mysql.yaml  run_mysql_client.sh
demos/postgres/: 0001-Hack-lwlock-to-support-postgresml-extension.patch  README.md  (+7 more)
test/: Occlum.json
tools/: occlum
tools/toolchains/hyper_ra/: Cargo.toml  bom.yaml  build.rs  build.sh
tools/toolchains/hyper_ra/examples/: hyper_ra_test.rs
tools/toolchains/hyper_ra/src/: hyper_ra.rs  lib.rs
(+612 files in other folders)
